[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cs314-group-project"
version = "0.0.1"
description = 'Group project for CS314 Principles of Software Engineering'
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Benjamin Lutz", email = "benlutz@pdx.edu" },
  { name = "Otter Winter", email = "otterw@pdx.edu" },
  { name = "Baylie Gende", email = "brg5@pdx.edu" },
  { name = "Elliot Roberts", email = "relliot@pdx.edu" },
  { name = "Shraya Ramamoorthy", email = "shraya@pdx.edu" },
  { name = "Jessie Le", email = "jessie28@pdx.edu" },
]
classifiers = [
  "Private ::",
  "Development Status :: 1 - Planning",
]
dependencies = []

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pandas",
  "tabulate",
  "jinja2",
  "datetime",
  "pathlib",

]
path = ".hatch"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
main = "python -m cs314_group_project"

[[tool.hatch.envs.all.matrix]]
python = ["3.10"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/cs314_group_project tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",

  # The above stuff was all automatically generated by hatch.
  # Below is stuff I'm changing.

  #Ignore due to bug in pyflakes
  "F821",

  # Allow printing (I guess some projects don't want print, but that's how our software operates).
  "T201",

  # Allow magic values. We don't care.
  "PLR2004",

  # We don't care if our users' medical data gets hacked tbh
  "S",
  # Ignore unsorted or un-formatted import block
  "I001",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["cs314_group_project"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
